--- a/demo/package.json
+++ b/demo/package.json
@@ -50,6 +50,7 @@
     "antd": "^3.20.0",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
+    "hash.js": "^1.1.7",
     "lodash": "^4.17.11",
     "lodash-decorators": "^6.0.1",
     "memoize-one": "^5.0.4",
@@ -106,6 +107,7 @@
     "stylelint": "^10.1.0",
     "umi-plugin-ga": "^1.1.3",
     "umi-plugin-pro": "^1.0.2",
+    "umi-plugin-pro-block-ts": "^1.3.8",
     "umi-types": "^0.3.8",
     "webpack-theme-color-replacer": "^1.2.15"
   },
