--- a/demo/package.json
+++ b/demo/package.json
@@ -25,11 +25,6 @@
     "test:all": "node ./tests/run-tests.js",
     "test:component": "umi test ./src/components"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged"
-    }
-  },
   "lint-staged": {
     "**/*.less": "stylelint --syntax less",
     "**/*.{js,jsx,tsx,ts,less,md,json}": [
@@ -47,6 +42,7 @@
   "dependencies": {
     "@ant-design/pro-layout": "^4.5.9",
     "@antv/data-set": "^0.10.2",
+    "@types/react-router": "^5.0.3",
     "antd": "^3.20.0",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
@@ -55,6 +51,7 @@
     "lodash-decorators": "^6.0.1",
     "memoize-one": "^5.0.4",
     "moment": "^2.24.0",
+    "nzh": "^1.0.4",
     "omit.js": "^1.0.2",
     "path-to-regexp": "^3.0.0",
     "prop-types": "^15.7.2",
@@ -66,6 +63,7 @@
     "react-dom": "^16.8.6",
     "react-media": "^1.9.2",
     "react-media-hook2": "^1.0.5",
+    "react-router": "^4.3.1",
     "redux": "^4.0.1",
     "umi": "^2.8.7",
     "umi-plugin-pro-block": "^1.3.2",
