--- a/demo/package.json
+++ b/demo/package.json
@@ -43,6 +43,7 @@
     "@ant-design/pro-layout": "^4.5.9",
     "@antv/data-set": "^0.10.2",
     "@types/react-router": "^5.0.3",
+    "@types/uuid": "^3.4.5",
     "antd": "^3.20.0",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
@@ -69,7 +70,8 @@
     "umi": "^2.8.7",
     "umi-plugin-pro-block": "^1.3.2",
     "umi-plugin-react": "^1.9.5",
-    "umi-request": "^1.0.8"
+    "umi-request": "^1.0.8",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@ant-design/colors": "^3.1.0",
