--- a/demo/package.json
+++ b/demo/package.json
@@ -48,6 +48,7 @@
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
     "hash.js": "^1.1.7",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "lodash-decorators": "^6.0.1",
     "memoize-one": "^5.0.4",
@@ -80,6 +81,7 @@
     "@types/express": "^4.17.0",
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.13",
+    "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.133",
     "@types/qs": "^6.5.3",
     "@types/react": "^16.8.19",
