--- a/demo/package.json
+++ b/demo/package.json
@@ -57,7 +57,8 @@
     "omit.js": "^1.0.2",
     "path-to-regexp": "^3.0.0",
     "prop-types": "^15.7.2",
-    "qs": "^6.7.0",
+    "qs": "^6.9.0",
+    "querystring": "^0.2.0",
     "react": "^16.8.6",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
